Se agregó la hoja de estilos y script para C3 al proyecto

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Estilos -->
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- C3 -->
+    <link rel="stylesheet" href="/c3/c3.min.css">
     
     <!-- Scripts -->
     <!-- Bootstrap -->
@@ -18,6 +20,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- D3 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="/c3/c3.min.js"></script>
 </head>
 <body>
     
