--- a/index.html
+++ b/index.html
@@ -11,24 +11,98 @@
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- C3 -->
-    <link rel="stylesheet" href="~/c3/c3.min.css">
+    <link rel="stylesheet" href="c3/c3.min.css">
     <!-- App -->
-    <link rel="stylesheet" href="/css/app.styles.css">
+    <link rel="stylesheet" href="css/app.styles.css">
+    <!-- Bootstrap icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     
     <!-- Scripts -->
-    <!-- Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- Jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- D3 -->
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <!-- C3 -->
-    <script src="~/c3/c3.min.js"></script>
+    <script src="c3/c3.min.js"></script>
     <!-- App -->
-    <script src="~/js/app.javascript.js"></script>
+    <script src="js/app.javascript.js"></script>
 </head>
 <body>
-    <!-- <script type="module">
+  <header></header>
+  <div class="container-fluid">
+    <div class="col-lg-12">
+        <div class="container-fluid">
+          <br>
+          <br>
+            <div class="row">
+              <div class="card col-lg-3 p-1">
+                <img src="img/tacos.png" class="card-img-top" alt="...">
+                <div class="card-body text-center">
+                  <h5 class="card-title">Tacos al pastor</h5>
+                  <p class="card-text">México</p>
+                  <button id="tacos" type="button" class="btn btn-primary btn-lg position-relative">
+                    Tacos <i class="bi bi-hand-thumbs-up"></i>
+                    <span id="votos_tacos" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                      0
+                        <span class="visually-hidden">votos</span>
+                    </span>
+                  </button>
+                </div> 
+              </div>
+              <div class="card col-lg-3 p-1">
+              <img src="img/paella.jpg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">Paella Valenciana</h5>
+                <p class="card-text">España</p>
+                <button id="paella" type="button" class="btn btn-success btn-lg position-relative">
+                  Paella <i class="bi bi-hand-thumbs-up"></i>
+                  <span id="votos_paella" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    0
+                      <span class="visually-hidden">votos</span>
+                  </span>
+                </button>
+              </div>
+            </div>
+            <div class="card col-lg-3 p-1">
+              <img src="img/Ceviche.jpeg" class="card-img-top" alt="...">
+              <div class="card-body text-center">
+                <h5 class="card-title">Ceviche Peruano</h5>
+                <p class="card-text">Perú</p>
+                <button id="ceviche" type="button" class="btn btn-info btn-lg position-relative">
+                  Ceviche <i class="bi bi-hand-thumbs-up"></i>
+                  <span id="votos_ceviche" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                    0
+                      <span class="visually-hidden">votos</span>                 
+                  </span>
+                </button>
+              </div>
+          </div>
+          <div class="card col-lg-3 p-1">
+            <img src="img/Mangu.JPG" class="card-img-top" alt="...">
+            <div class="card-body text-center">
+              <h5 class="card-title">Mangú</h5>
+              <p class="card-text">República Dominicana</p>
+              <button id="mangu" type="button" class="btn btn-warning btn-lg position-relative">
+                Mangú <i class="bi bi-hand-thumbs-up"></i>
+                <span id="votos_mangu" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                  0
+                  <span class="visually-hidden">votos</span>                
+                </span>
+              </button>
+            </div>
+          </div>
+            </div>
+            <br>
+            <div class="row text-center">
+              <h1>Total de votos emitidos <span class="badge rounded-pill text-bg-dark col-lg-2">0</span></h1>
+          </div>
+            </div>
+    </div>
+</div>
+  <footer></footer>
+    <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
@@ -50,7 +124,7 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
-      </script> -->
-      <script src="~/firebase/fb.js"></script>
+      </script>
+      <!-- <script src="firebase/fb.js"></script> -->
 </body>
 </html>
