--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <script src="c3/c3.min.js"></script>
     <!-- App -->
     <script src="js/app.javascript.js"></script>
+    <!-- Firebase -->
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 </head>
 <body>
   <header></header>
@@ -102,7 +104,7 @@
     </div>
 </div>
   <footer></footer>
-    <script type="module">
+    <!-- <script type="module">
         // Import the functions you need from the SDKs you need
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
         import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
@@ -124,9 +126,9 @@
         // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const analytics = getAnalytics(app);
-      </script>
-      <!-- <script src="firebase/fb.js"></script> -->
-      <!-- Tooltips -->
+      </script> -->
+      <script type="module" src="firebase/fb.js"></script>
+      <!-- Tooltips de bootstrap -->
       <script>
         {
           const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]')
