--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sistema de votación en línea</title>
 
     <!-- Estilos -->
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- C3 -->
@@ -40,14 +41,14 @@
           <br>
             <div class="row">
               <div class="card col-lg-3 p-1">
-                <img src="img/tacos.png" class="card-img-top" alt="...">
+                <img src="img/taco.png" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                   <h5 class="card-title">Tacos al pastor</h5>
                   <p class="card-text">México</p>
-                  <button id="tacos" type="button" class="btn btn-primary btn-lg position-relative" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Vota por los tacos">
+                  <button id="tacos" type="button" class="btn btn-primary btn-lg position-relative">
                     Tacos <i class="bi bi-hand-thumbs-up"></i>
                     <span id="votos_tacos" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                      0
+                      <i>0</i>
                         <span class="visually-hidden">votos</span>
                     </span>
                   </button>
@@ -58,10 +59,10 @@
               <div class="card-body text-center">
                 <h5 class="card-title">Paella Valenciana</h5>
                 <p class="card-text">España</p>
-                <button id="paella" type="button" class="btn btn-success btn-lg position-relative" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Vota por la paella">
+                <button id="paella" type="button" class="btn btn-success btn-lg position-relative">
                   Paella <i class="bi bi-hand-thumbs-up"></i>
                   <span id="votos_paella" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                    0
+                    <i>0</i>
                       <span class="visually-hidden">votos</span>
                   </span>
                 </button>
@@ -72,10 +73,10 @@
               <div class="card-body text-center">
                 <h5 class="card-title">Ceviche Peruano</h5>
                 <p class="card-text">Perú</p>
-                <button id="ceviche" type="button" class="btn btn-info btn-lg position-relative" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Vota por el Ceviche">
+                <button id="ceviche" type="button" class="btn btn-info btn-lg position-relative">
                   Ceviche <i class="bi bi-hand-thumbs-up"></i>
                   <span id="votos_ceviche" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                    0
+                    <i>0</i>
                       <span class="visually-hidden">votos</span>                 
                   </span>
                 </button>
@@ -86,10 +87,10 @@
             <div class="card-body text-center">
               <h5 class="card-title">Mangú</h5>
               <p class="card-text">República Dominicana</p>
-              <button id="mangu" type="button" class="btn btn-warning btn-lg position-relative" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Vota por el Mangú">
+              <button id="mangu" type="button" class="btn btn-warning btn-lg position-relative">
                 Mangú <i class="bi bi-hand-thumbs-up"></i>
                 <span id="votos_mangu" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                  0
+                  <i>0</i>
                   <span class="visually-hidden">votos</span>                
                 </span>
               </button>
@@ -98,35 +99,26 @@
             </div>
             <br>
             <div class="row text-center">
-              <h1>Total de votos emitidos <span class="badge rounded-pill text-bg-dark col-lg-2">0</span></h1>
-          </div>
+              <h1 id="total">Total de votos emitidos <span class="badge rounded-pill text-bg-dark col-lg-2">0</span></h1>
+      </div>
+      <!-- Modal -->
+      <div class="modal fade" id="msGracias" tabindex="-1" aria-labelledby="msGraciasLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content bg-transparent border-0">
+            <div class="modal-body text-center bg-transparent">
+              <button type="button" class="btn-close text-bg-warning float-end" data-bs-dismiss="modal" aria-label="Close"></button><br>
+              <img id="chibi" src="" alt="" srcset="" class="mw-100">
+              <div class="row">
+                <h3 id="message" class="text-warning fw-bolder" style="text-shadow: 2px 2px 2px black;"></h3>
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
   <footer></footer>
-    <!-- <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-      
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-          apiKey: "AIzaSyDIMG7dOEXrE2HACNZ6uT0CEicMzZyGRFo",
-          authDomain: "votationapp-1323f.firebaseapp.com",
-          projectId: "votationapp-1323f",
-          storageBucket: "votationapp-1323f.appspot.com",
-          messagingSenderId: "933375892326",
-          appId: "1:933375892326:web:3090cd055144b00e7506a7",
-          measurementId: "G-WSHHR1YM6N"
-        };
-      
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-      </script> -->
       <script type="module" src="firebase/fb.js"></script>
       <!-- Tooltips de bootstrap -->
       <script>
