--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <!-- D3 -->
-    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <!-- C3 -->
     <script src="c3/c3.min.js"></script>
     <!-- App -->
@@ -38,7 +38,16 @@
     <div class="col-lg-12">
         <div class="container-fluid">
           <br>
-          <br>
+          <div class="grafica">
+            <h1 class="text-center">Sistema de votaciones</h1>
+            <div id="chart"></div>
+            <div class="btn-group" role="group" aria-label="Selector de gráfica">
+              <button id="bar" type="button" class="btn btn-dark"><i class="bi bi-bar-chart-line-fill"></i> Barra</button>
+              <button id="pie" type="button" class="btn btn-dark"><i class="bi bi-pie-chart-fill"></i> Pastel</button>
+              <button id="donut" type="button" class="btn btn-dark"><i class="bi bi-pie-chart"></i> Rosca</button>
+            </div>
+          </div>
+          <hr>
             <div class="row">
               <div class="card col-lg-3 p-1">
                 <img src="img/taco.png" class="card-img-top" alt="...">
