Spinner agregado con éxito en gráfica y área de votación

--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
           <br>
           <div class="grafica">
             <h1 class="text-center">Sistema de votaciones</h1>
+            <div id="spinner" class="d-flex justify-content-center row">
+              <div class="col-lg-2">
+                <strong>Cargando datos...</strong>
+                <div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+              </div>
+            </div>
             <div id="chart"></div>
             <div class="btn-group" role="group" aria-label="Selector de gráfica">
               <button id="bar" type="button" class="btn btn-dark"><i class="bi bi-bar-chart-line-fill"></i> Barra</button>
